update sqlite,postgres jdbc driver